--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     "require": {
         "php": ">=5.6.0",
         "yiisoft/yii2": "~2.0.15",
+        "symfony/process": "*",
         "jbroadway/urlify": "^1.1",
         "league/flysystem": "^1.0",
         "yii2tech/csv-grid": "*"
