--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "stupidkitty/gallery",
     "description": "Gallery module, yii2",
+    "version": "3.0",
     "type": "yii2-extension",
     "keywords": ["yii2","gallery"],
     "license": "MIT",
